--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,19 @@
 # Core dependencies for EnergyPlus automation
 eppy>=0.5.63
-geomeppy>=0.11.8
 pandas>=2.0.0
 pydantic>=2.0.0
 numpy>=1.24.0
 pyyaml>=6.0
 tqdm>=4.65.0
 
-# Development dependencies (optional)
-# Uncomment if needed:
-# pytest>=7.0.0
-# pytest-cov>=4.0.0
-# black>=23.0.0
-# ruff>=0.1.0
-
 # Visualization & UI
 streamlit>=1.28.0
 plotly>=5.14.0
 
-# Co-Simulation (optional, for future use)
-# pyfmi>=2.9.0
-# fmpy>=0.3.0
+# Optional: Advanced geometry (requires C++ compiler)
+# Uncomment only if you have Visual Studio Build Tools installed:
+# geomeppy>=0.11.8
 
-# Machine Learning (optional, for future use)
-# scikit-learn>=1.3.0
+# Development dependencies (optional)
+# pytest>=7.0.0
+# pytest-cov>=4.0.0
